--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -6,26 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https:// cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static',filename = 'css/estilos.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename = 'css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename = 'css/docs.css') }}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
 
 </head>
 
-<div class="content">
-    {% block body %}
-    {% endblock %}
-</div>
-
-<footer class="footer bg-dark text-white text-center py-3">
-    <div class="container">
-        <p class="mb-0">© 2024 Todos los derechos reservados.</p>
+<body>
+    <div class="header">
+        <a class="titulo" href="{{url_for('index')}}">ISOFTW</a>
+        <nav>
+            <button class="menu-toggle" aria-label="Toggle menu"><img
+                    src="{{ url_for('static',filename = 'img/menu.svg') }}" alt=""></button>
+            <ul class="nav-menu">
+                <li><a href="{{url_for('infoDocu')}}">Informacion Documentada</a></li>
+            </ul>
+        </nav>
     </div>
-</footer>
-
-<script src="{{ url_for('static', filename='js/script.js') }}"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/jquery.slim.min.js') }}"></script>
+    <div class="content">
+        {% block body %}
+        {% endblock %}
+    </div>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.slim.min.js') }}"></script>
 </body>
 
 </html>
