--- a/app/static/css/estilos.css
+++ b/app/static/css/estilos.css
@@ -201,6 +201,7 @@ td:last-child, td:nth-last-child(2) {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
     text-align: center;
+    align-items: center;
     transition: transform 0.3s ease;
 }
 
