--- a/app/templates/informacionDocumentada/index.html
+++ b/app/templates/informacionDocumentada/index.html
@@ -43,26 +43,20 @@
           <div class="modal-body">
             <!-- Campos del formulario -->
             <div class="mb-3">
-              <label for="nombreDocumento1" class="form-label"
-                >Nombre del Documento</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="nombreDocumento1"
-                name="nombreDocumento"
-                required
-              />
+              <label for="nombreDocumento1" class="form-label" >Codigo del Documento</label>
+              <input type="text" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
             </div>
             <div class="mb-3">
-              <label for="descripcion1" class="form-label">Descripción</label>
-              <textarea
-                class="form-control"
-                id="descripcion1"
-                name="descripcion"
-                rows="3"
-                required
-              ></textarea>
+              <label for="nombreDocumento1" class="form-label" >Numero de Revision</label>
+              <input type="text" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
+            </div>
+            <div class="mb-3">
+              <label for="nombreDocumento1" class="form-label" >Fecha de emision</label>
+              <input type="date" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
+            </div>
+            <div class="mb-3">
+              <label for="nombreDocumento1" class="form-label" >Fecha de Revision</label>
+              <input type="date" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
             </div>
           </div>
           <div class="modal-footer">
@@ -242,7 +236,7 @@
   <div class="card">
     <h3>Informe de Revisión por la Dirección</h3>
     <img
-      src="{{ url_for('static', filename='img/3.png') }}"
+      src="{{ url_for('static', filename='img/4.png') }}"
       height="150"
       width="150"
     />
@@ -255,7 +249,7 @@
     </button>
   </div>
 
-  <!-- Modal con formulario para Tarjeta 2 -->
+  <!-- Modal con formulario para Tarjeta 4 -->
   <div
     class="modal fade"
     id="modal4"
@@ -281,13 +275,13 @@
           <div class="modal-body">
             <!-- Campos del formulario -->
             <div class="mb-3">
-              <label for="nombreInforme2" class="form-label"
+              <label for="nombreInforme4" class="form-label"
                 >Nombre del Informe</label
               >
               <input
                 type="text"
                 class="form-control"
-                id="nombreInforme2"
+                id="nombreInforme4"
                 name="nombreInforme"
                 required
               />
@@ -296,7 +290,7 @@
               <label for="descripcion2" class="form-label">Descripción</label>
               <textarea
                 class="form-control"
-                id="descripcion2"
+                id="descripcion4"
                 name="descripcion"
                 rows="3"
                 required
@@ -340,6 +334,85 @@
     id="modal5"
     tabindex="-1"
     aria-labelledby="modalLabel5"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form method="POST" action="/guardar_informe">
+          <!-- Ruta del servidor para procesar -->
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalLabel2">
+              Formulario: Informe de Revisión
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- Campos del formulario -->
+            <div class="mb-3">
+              <label for="nombreInforme5" class="form-label"
+                >Nombre del Informe</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="nombreInforme5"
+                name="nombreInforme"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="descripcion2" class="form-label">Descripción</label>
+              <textarea
+                class="form-control"
+                id="descripcion2"
+                name="descripcion"
+                rows="3"
+                required
+              ></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cancelar
+            </button>
+            <button type="submit" class="btn btn-primary">Guardar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- Tarjeta 6 -->
+  <div class="card">
+    <h3>Informe de Revisión por la Dirección</h3>
+    <img
+      src="{{ url_for('static', filename='img/6.png') }}"
+      height="150"
+      width="150"
+    />
+    <button
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#modal6"
+    >
+      Abrir formulario
+    </button>
+  </div>
+
+  <!-- Modal con formulario para Tarjeta 6 -->
+  <div
+    class="modal fade"
+    id="modal6"
+    tabindex="-1"
+    aria-labelledby="modalLabel6"
     aria-hidden="true"
   >
     <div class="modal-dialog">
