--- a/app/templates/informacionDocumentada/index.html
+++ b/app/templates/informacionDocumentada/index.html
@@ -1,485 +1,27 @@
-{% extends './layout.html' %} {% block body %}
-<div class="grid-container">
-  <!-- Tarjeta 1 -->
-  <div class="card">
-    <h3>Listado Maestro de Documentos</h3>
-    <img
-      src="{{ url_for('static', filename='img/1.png') }}"
-      height="150"
-      width="150"
-    />
-    <button
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#modal1"
-    >
-      Abrir formulario
-    </button>
-  </div>
-
-  <!-- Modal con formulario para Tarjeta 1 -->
-  <div
-    class="modal fade"
-    id="modal1"
-    tabindex="-1"
-    aria-labelledby="modalLabel1"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form method="POST" action="/guardar_documento">
-          <!-- Ruta del servidor para procesar -->
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLabel1">
-              Formulario: Listado Maestro de Documentos
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- Campos del formulario -->
-            <div class="mb-3">
-              <label for="nombreDocumento1" class="form-label" >Codigo del Documento</label>
-              <input type="text" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
-            </div>
-            <div class="mb-3">
-              <label for="nombreDocumento1" class="form-label" >Numero de Revision</label>
-              <input type="text" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
-            </div>
-            <div class="mb-3">
-              <label for="nombreDocumento1" class="form-label" >Fecha de emision</label>
-              <input type="date" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
-            </div>
-            <div class="mb-3">
-              <label for="nombreDocumento1" class="form-label" >Fecha de Revision</label>
-              <input type="date" class="form-control" id="nombreDocumento1" name="nombreDocumento" required/>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancelar
-            </button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-          </div>
-        </form>
+<form method="POST" action="{{ url_for('guardar_documento') }}">
+    <div class="modal-body">
+      <!-- Documentos -->
+      <div class="mb-3">
+        <label for="codigoDocumento1" class="form-label">Código del Documento</label>
+        <input type="text" class="form-control" id="codigoDocumento1" name="documentos[0][codigoDocumento]" required />
+      </div>
+      <div class="mb-3">
+        <label for="numeroRevision1" class="form-label">Número de Revisión</label>
+        <input type="text" class="form-control" id="numeroRevision1" name="documentos[0][numeroRevision]" required />
+      </div>
+      <div class="mb-3">
+        <label for="fechaEmision1" class="form-label">Fecha de Emisión</label>
+        <input type="date" class="form-control" id="fechaEmision1" name="documentos[0][fechaEmision]" required />
+      </div>
+      <div class="mb-3">
+        <label for="fechaRevision1" class="form-label">Fecha de Revisión</label>
+        <input type="date" class="form-control" id="fechaRevision1" name="documentos[0][fechaRevision]" required />
       </div>
     </div>
-  </div>
-
-  <!-- Tarjeta 2 -->
-  <div class="card">
-    <h3>Informe de Revisión por la Dirección</h3>
-    <img
-      src="{{ url_for('static', filename='img/2.png') }}"
-      height="150"
-      width="150"
-    />
-    <button
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#modal2"
-    >
-      Abrir formulario
-    </button>
-  </div>
-
-  <!-- Modal con formulario para Tarjeta 2 -->
-  <div
-    class="modal fade"
-    id="modal2"
-    tabindex="-1"
-    aria-labelledby="modalLabel2"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form method="POST" action="/guardar_informe">
-          <!-- Ruta del servidor para procesar -->
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLabel2">
-              Formulario: Informe de Revisión
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- Campos del formulario -->
-            <div class="mb-3">
-              <label for="nombreInforme2" class="form-label"
-                >Nombre del Informe</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="nombreInforme2"
-                name="nombreInforme"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="descripcion2" class="form-label">Descripción</label>
-              <textarea
-                class="form-control"
-                id="descripcion2"
-                name="descripcion"
-                rows="3"
-                required
-              ></textarea>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancelar
-            </button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-          </div>
-        </form>
-      </div>
+  
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+      <button type="submit" class="btn btn-primary">Guardar</button>
     </div>
-  </div>
-  <!-- Tarjeta 3 -->
-  <div class="card">
-    <h3>Informe de Revisión por la Dirección</h3>
-    <img
-      src="{{ url_for('static', filename='img/3.png') }}"
-      height="150"
-      width="150"
-    />
-    <button
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#modal3"
-    >
-      Abrir formulario
-    </button>
-  </div>
-
-  <!-- Modal con formulario para Tarjeta 2 -->
-  <div
-    class="modal fade"
-    id="modal3"
-    tabindex="-1"
-    aria-labelledby="modalLabel2"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form method="POST" action="/guardar_informe">
-          <!-- Ruta del servidor para procesar -->
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLabel2">
-              Formulario: Informe de Revisión
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- Campos del formulario -->
-            <div class="mb-3">
-              <label for="nombreInforme2" class="form-label"
-                >Nombre del Informe</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="nombreInforme2"
-                name="nombreInforme"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="descripcion2" class="form-label">Descripción</label>
-              <textarea
-                class="form-control"
-                id="descripcion2"
-                name="descripcion"
-                rows="3"
-                required
-              ></textarea>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancelar
-            </button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!-- Tarjeta 4 -->
-  <div class="card">
-    <h3>Informe de Revisión por la Dirección</h3>
-    <img
-      src="{{ url_for('static', filename='img/4.png') }}"
-      height="150"
-      width="150"
-    />
-    <button
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#modal4"
-    >
-      Abrir formulario
-    </button>
-  </div>
-
-  <!-- Modal con formulario para Tarjeta 4 -->
-  <div
-    class="modal fade"
-    id="modal4"
-    tabindex="-1"
-    aria-labelledby="modalLabel2"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form method="POST" action="/guardar_informe">
-          <!-- Ruta del servidor para procesar -->
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLabel2">
-              Formulario: Informe de Revisión
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- Campos del formulario -->
-            <div class="mb-3">
-              <label for="nombreInforme4" class="form-label"
-                >Nombre del Informe</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="nombreInforme4"
-                name="nombreInforme"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="descripcion2" class="form-label">Descripción</label>
-              <textarea
-                class="form-control"
-                id="descripcion4"
-                name="descripcion"
-                rows="3"
-                required
-              ></textarea>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancelar
-            </button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!-- Tarjeta 5 -->
-  <div class="card">
-    <h3>Informe de Revisión por la Dirección</h3>
-    <img
-      src="{{ url_for('static', filename='img/5.png') }}"
-      height="150"
-      width="150"
-    />
-    <button
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#modal5"
-    >
-      Abrir formulario
-    </button>
-  </div>
-
-  <!-- Modal con formulario para Tarjeta 5 -->
-  <div
-    class="modal fade"
-    id="modal5"
-    tabindex="-1"
-    aria-labelledby="modalLabel5"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form method="POST" action="/guardar_informe">
-          <!-- Ruta del servidor para procesar -->
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLabel2">
-              Formulario: Informe de Revisión
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- Campos del formulario -->
-            <div class="mb-3">
-              <label for="nombreInforme5" class="form-label"
-                >Nombre del Informe</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="nombreInforme5"
-                name="nombreInforme"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="descripcion2" class="form-label">Descripción</label>
-              <textarea
-                class="form-control"
-                id="descripcion2"
-                name="descripcion"
-                rows="3"
-                required
-              ></textarea>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancelar
-            </button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!-- Tarjeta 6 -->
-  <div class="card">
-    <h3>Informe de Revisión por la Dirección</h3>
-    <img
-      src="{{ url_for('static', filename='img/6.png') }}"
-      height="150"
-      width="150"
-    />
-    <button
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#modal6"
-    >
-      Abrir formulario
-    </button>
-  </div>
-
-  <!-- Modal con formulario para Tarjeta 6 -->
-  <div
-    class="modal fade"
-    id="modal6"
-    tabindex="-1"
-    aria-labelledby="modalLabel6"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form method="POST" action="/guardar_informe">
-          <!-- Ruta del servidor para procesar -->
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLabel2">
-              Formulario: Informe de Revisión
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <!-- Campos del formulario -->
-            <div class="mb-3">
-              <label for="nombreInforme5" class="form-label"
-                >Nombre del Informe</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="nombreInforme5"
-                name="nombreInforme"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="descripcion2" class="form-label">Descripción</label>
-              <textarea
-                class="form-control"
-                id="descripcion2"
-                name="descripcion"
-                rows="3"
-                required
-              ></textarea>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
-              Cancelar
-            </button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-  <!-- <div class="card">
-      <h3>Tarjeta 7</h3>
-      <p>Contenido de la tarjeta 7.</p>
-    </div>
-    <div class="card">
-      <h3>Tarjeta 8</h3>
-      <p>Contenido de la tarjeta 8.</p>
-    </div>
-    <div class="card">
-      <h3>Tarjeta 9</h3>
-      <p>Contenido de la tarjeta 9.</p>
-    </div> -->
-</div>
-{% endblock %}
+  </form>
+  
